Fix z-index of messagebar

--- a/app/client/components/MessageBar/styles.scss
+++ b/app/client/components/MessageBar/styles.scss
@@ -12,13 +12,14 @@
   transform: translateY(-100%);
   padding: 5px 10px;
   line-height: 1.2em;
+  z-index: 1;
 
   &.visible, &.static {
     transform: none;
   }
 
   &.static {
-    z-index: 1;
+    z-index: 10;
     position: static;
   }
 
